force-app/main/default/objects/StatusTracking__c/StatusTracking__c.object-meta.xml
<CustomObject>
    <description>SSSW - Custom Case Tracking to manage Business Hour Calculations for the change of Status Values, based on Owner.</description>
    <label>Status Tracking</label>
    <nameField>
        <label>Change Date/Time</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Status Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>