force-app/main/default/objects/StatusTracking__c/fields/AssignedByFillInbox__c.field-meta.xml
<CustomField>
    <fullName>AssignedByFillInbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be marked true when the agents click &quot;Fill Inbox&quot; a case is assigned to them. This flag will be used for reporting on number of cases assigned/closed by Fill Inbox.</description>
    <inlineHelpText>Case assigned by Fill Inbox</inlineHelpText>
    <label>Assigned by Fill Inbox</label>
    <type>Checkbox</type>
</CustomField>