force-app/main/default/objects/StatusTracking__c/fields/Business_hour_duration__c.field-meta.xml
<CustomField>
    <fullName>Business_hour_duration__c</fullName>
    <formula>IF( 
ISBLANK(EndDate__c), 
IF(DATEVALUE(StartDate__c) = DATEVALUE(NOW()), 
((NOW() - StartDate__c ) * 24 ), 
10*( 
(5*FLOOR((TODAY()-DATE(1996,01,01))/7) + 
MIN(5, 
MOD(TODAY()-DATE(1996,01,01), 7) + 
MIN(1, 24/9*(MOD((NOW()- DATETIMEVALUE(&apos;1996-01-01 21:30:00&apos;)), 1))) 
)) 
- 
(5*FLOOR((DATEVALUE(StartDate__c )-DATE(1996,01,01))/7) + 
MIN(5, 
MOD(DATEVALUE(StartDate__c)-DATE(1996,01,01), 7) + 
MIN(1, 24/9*(MOD((StartDate__c - DATETIMEVALUE(&apos;1996-01-01 21:30:00&apos;)), 1))) 
)) 
) 
), 
DurationHours__c + DurationMins__c/60 + DurationSeconds__c/3600 
)</formula>
    <label>Business Hours Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>