force-app/main/default/objects/StatusTracking__c/fields/Case_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Contact_Id__c</fullName>
    <formula>CASESAFEID(Case__r.ContactId)</formula>
    <label>Case Contact Id</label>
    <type>Text</type>
</CustomField>