force-app/main/default/objects/StatusTracking__c/fields/CreatedByID__c.field-meta.xml
<CustomField>
    <fullName>CreatedByID__c</fullName>
    <formula>CreatedById</formula>
    <label>CreatedByID</label>
    <type>Text</type>
</CustomField>