force-app/main/default/objects/StatusTracking__c/fields/CreatorProfile__c.field-meta.xml
<CustomField>
    <fullName>CreatorProfile__c</fullName>
    <formula>CreatedBy.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creator Profile</label>
    <type>Text</type>
</CustomField>