force-app/main/default/objects/StatusTracking__c/fields/DurationMins__c.field-meta.xml
<CustomField>
    <fullName>DurationMins__c</fullName>
    <label>Duration Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>