force-app/main/default/objects/StatusTracking__c/fields/DurationSeconds__c.field-meta.xml
<CustomField>
    <fullName>DurationSeconds__c</fullName>
    <label>Duration Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>