force-app/main/default/objects/StatusTracking__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>The end time for tracking.</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>