force-app/main/default/objects/StatusTracking__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fax</label>
    <referenceTo>Fax__c</referenceTo>
    <relationshipLabel>Status Tracking</relationshipLabel>
    <relationshipName>Status_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>