force-app/main/default/objects/StatusTracking__c/fields/FieldsChanged__c.field-meta.xml
<CustomField>
    <fullName>FieldsChanged__c</fullName>
    <label>Fields Changed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>