force-app/main/default/objects/StatusTracking__c/fields/NetworkResponseValue__c.field-meta.xml
<CustomField>
    <fullName>NetworkResponseValue__c</fullName>
    <label>Network Response Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>