force-app/main/default/objects/StatusTracking__c/fields/StatusDuration__c.field-meta.xml
<CustomField>
    <fullName>StatusDuration__c</fullName>
    <formula>(LastModifiedDate - CreatedDate)*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>