force-app/main/default/objects/StatusTracking__c/fields/StatusValue__c.field-meta.xml
<CustomField>
    <fullName>StatusValue__c</fullName>
    <label>Status Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>