force-app/main/default/objects/StatusTracking__c/recordTypes/SalesOperations.recordType-meta.xml
<RecordType>
    <fullName>SalesOperations</fullName>
    <active>true</active>
    <description>Case Tracking for the Sales Operations Case Types</description>
    <label>Sales Operations</label>
</RecordType>