force-app/main/default/objects/StatusTracking__c/recordTypes/SSSWGeneral.recordType-meta.xml
<RecordType>
    <fullName>SSSWGeneral</fullName>
    <active>true</active>
    <description>Case Tracking for the SSSW General Case Types</description>
    <label>SSSW General</label>
</RecordType>