force-app/main/default/objects/StatusTracking__c/recordTypes/User_Support_Queries.recordType-meta.xml
<RecordType>
    <fullName>User_Support_Queries</fullName>
    <active>false</active>
    <description>used for user support query case status tracking</description>
    <label>User Support Queries</label>
</RecordType>